tests/invalid/Template_Invalid_9.whiley
function f<T>(T x) -> (T y):
    return x

method main():
    bool x = f(1)